--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <body>
 
   <header class="site-header">
-    <h1 class="sr-only">Scrollnapping animations</h1>
 
     <!-- Because Chrome crashes if an overflow is set on the fieldset while a named timeline is on a child element -->
     <!-- ¯\_(ツ)_/¯ -->
@@ -76,45 +75,43 @@
         </div>
       </div>
     </section>
-    <section id="layout" class="section">
+    <section id="scrolling" class="section">
       <div class="content">
-        <h2><strong>Then</strong>, we position a <em>fixed</em> layout</h2>
+        <div class="section-content">
+          <div class="image-container">
+            <img src="/img/chatnoir2.jpg" alt="">
+          </div>
+          <div class="text">
+            <h2>This is a scrolling test</h2>
+            <p>We set the scrolling element, in this case our <code class="selector">HTML</code> element, to forcibly
+              snap
+              to the Y axis by using <code class="property">scroll-snap-type: y mandatory</code>.</p>
 
-        <div class="text">
-          <img src="/img/chatnoir2.jpg" alt="">
-          <p>We set the <code class="selector">.content</code> elements to <code class="property">position: fixed</code>, so they're removed from the normal document flow and stack on top of each other, giving them a solid background, so only one is visible at a time.</p>
-
-          <p>Their parent <code class="selector">section</code>s are positioned as normal in the layer below, taking up space, scroll-snapping, and powering the <code class="property">animation-timeline</code>.</p>
+            <p>And then we set <code class="selector">section</code> as the snapping elements by using <code
+                class="property">scroll-snap-align: start</code>.</p>
+          </div>
         </div>
       </div>
     </section>
-    <section id="transition" class="section">
+    <section id="scrolling" class="section">
       <div class="content">
-        <h2><strong>Finally</strong>, we create the <em>transition</em> effects</h2>
+        <div class="section-content">
+          <div class="image-container">
+            <img src="/img/chatnoir2.jpg" alt="">
+          </div>
+          <div class="text">
+            <h2>This is a scrolling test</h2>
+            <p>We set the scrolling element, in this case our <code class="selector">HTML</code> element, to forcibly
+              snap
+              to the Y axis by using <code class="property">scroll-snap-type: y mandatory</code>.</p>
 
-        <div class="text">
-          <img src="/img/Voyageur.jpg" alt="">
-          <p>By setting the <code class="selector">.content</code> elements to <code class="property">position: fixed</code>, we can now transition between them without a visible scrolling movement.</p>
-
-          <p>We create a normal <code class="selector">@keyframe</code> animation to our liking to transition between them. Check the navigation menu to see different effects.</p>
+            <p>And then we set <code class="selector">section</code> as the snapping elements by using <code
+                class="property">scroll-snap-align: start</code>.</p>
+          </div>
         </div>
       </div>
     </section>
-    <section id="caveats" class="section">
-      <div class="content">
-        <h2><strong>Caveats</strong></h2>
 
-        <div class="text">
-          <img src="https://assets.codepen.io/197359/flower-purple.png" alt="">
-          <ul>
-            <li>Scrolling animations are not currently available in Firefox. This demo is using a polyfill.</li>
-            <li>This layout is fragile due to the use of <code class="property">position: fixed</code>. You need to carefully manage stacking contexts.</li>
-            <li>Snapping points have their own caveats, such as content taller than the viewport becoming inaccessible, along with the general annoyance of scrolljacking.</li>
-            <li>The <code class="selector">blink</code> effect uses the <code class="property">contrast()</code> filter, which modifies the colors of the entire section. Thus, the background is set to black (or white), ensuring that it appears unchanged during transitions due to already being at maximum contrast.</li>
-            </ul>
-        </div>
-      </div>
-    </section> -->
 
   </main>
 
