Refactor index.html to wrap section titles in a new container and emphasize the word "scrolling"; update style.css to include new title styles and animations, and add highlight effects for marked text.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
             <img src="/img/background_img.jpg" alt="">
           </div>
           <div class="text">
-            <h2>This is a scrolling test</h2>
+            <div class="title-container">
+              <h2>This is a <strong>scrolling</strong> test</h2>
+            </div>
             <p>We set the scrolling element, in this case our <code class="selector">HTML</code> element, to forcibly
               snap to the Y axis by using <code class="property">scroll-snap-type: y mandatory</code>.</p>
 
@@ -46,8 +48,10 @@
             <img src="/img/chatnoir1.jpg" alt="">
           </div>
           <div class="text">
-            <h2>This is a scrolling test</h2>
-            <p>We set the scrolling element, in this case our <code class="selector">HTML</code> element, to forcibly
+            <div class="title-container">
+              <h2>This is a <strong>scrolling</strong> test</h2>
+            </div>
+            <p>We set the scrolling element, <mark>in this case our HTML element</mark>, to forcibly
               snap
               to the Y axis by using <code class="property">scroll-snap-type: y mandatory</code>.</p>
 
@@ -64,7 +68,9 @@
             <img src="/img/chatnoir2.jpg" alt="">
           </div>
           <div class="text">
-            <h2>This is a scrolling test</h2>
+            <div class="title-container">
+              <h2>This is a <strong>scrolling</strong> test</h2>
+            </div>
             <p>We set the scrolling element, in this case our <code class="selector">HTML</code> element, to forcibly
               snap
               to the Y axis by using <code class="property">scroll-snap-type: y mandatory</code>.</p>
@@ -79,10 +85,12 @@
       <div class="content">
         <div class="section-content">
           <div class="image-container">
-            <img src="/img/chatnoir2.jpg" alt="">
+            <img src="/img/Voyageur.jpg" alt="">
           </div>
           <div class="text">
-            <h2>This is a scrolling test</h2>
+            <div class="title-container">
+              <h2>This is a <strong>scrolling</strong> test</h2>
+            </div>
             <p>We set the scrolling element, in this case our <code class="selector">HTML</code> element, to forcibly
               snap
               to the Y axis by using <code class="property">scroll-snap-type: y mandatory</code>.</p>
@@ -97,10 +105,12 @@
       <div class="content">
         <div class="section-content">
           <div class="image-container">
-            <img src="/img/chatnoir2.jpg" alt="">
+            <img src="/img/Sphynx.jpg" alt="">
           </div>
           <div class="text">
-            <h2>This is a scrolling test</h2>
+            <div class="title-container">
+              <h2>This is a <strong>scrolling</strong> test</h2>
+            </div>
             <p>We set the scrolling element, in this case our <code class="selector">HTML</code> element, to forcibly
               snap
               to the Y axis by using <code class="property">scroll-snap-type: y mandatory</code>.</p>
